--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,11 @@
 version: 2
 jobs:
   build:
-    docker:
-      # specify the version
-      - image: circleci/golang:1.12
+    # docker:
+    #   # specify the version
+    #   - image: circleci/golang:1.12
+    machine:
+      image: ubuntu-1604:201903-0
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
